Fix styles for list items so they don't overflow

--- a/themes/book/assets/_markdown.scss
+++ b/themes/book/assets/_markdown.scss
@@ -65,6 +65,7 @@
 
   img {
     max-width: 100%;
+    height: auto;
   }
 
   code {
@@ -84,6 +85,10 @@
       padding: 0;
       background: none;
     }
+  }
+
+  p {
+    word-wrap: break-word;
   }
 
   blockquote {
@@ -129,15 +134,13 @@
   ul,
   ol {
     padding-inline-start: $padding-16 * 2;
+    word-wrap: break-word;
   }
 
   dl {
     dt {
       font-weight: bolder;
       margin-top: $padding-16;
-      code {
-        font-size: .825rem;
-      }
     }
 
     dd {
